# Information_security

my-flet-app/: README.md  pyproject.toml  requirements.txt  Лаб.работа Приложение .docx
my-flet-app/app/: main.py  services.py  test.py
my-flet-app/src/: app.py  main.py  services.py  test.py  ui.py
my-flet-app/src/imgs/: README.md
my-flet-app/tests/: test_app.py
