[tool.poetry]
name = "my-flet-app"
version = "0.1.0"
description = "Flet приложение для демонстрации кодирования Shannon‑Fano и Huffman"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

# Указать совместимые версии Python
[tool.poetry.dependencies]
python = ">=3.8,<4.0"
flet = ">=0.1.0"
pandas = ">=1.5"

# Зависимости для разработки (тестирование)
[tool.poetry.dev-dependencies]
pytest = ">=7.0"

# Включаем пакет с кодом приложения
[[tool.poetry.packages]]
include = "app"

# Скрипт для запуска (по желанию можно запускать через `poetry run run-app`)
[tool.poetry.scripts]
run-app = "app.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"